--- a/Question 2/person_vehicle_detection_YOLOV5.ipynb
+++ b/Question 2/person_vehicle_detection_YOLOV5.ipynb
@@ -2,12 +2,12 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "ZDw3mnuwLBgG"
-      },
       "source": [
-        "![image.png](attachment:image.png)"
-      ]
+        "## YOLO V5"
+      ],
+      "metadata": {
+        "id": "zVW7hQh0IbIK"
+      }
     },
     {
       "cell_type": "code",
